--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,12 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="LargeDefaultTextStyle" parent="DefaultTextStyle">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+    </style>
+
     <style name="MediumDefaultTextStyle" parent="DefaultTextStyle">
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
