--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -2,8 +2,8 @@
 <com.airbnb.lottie.LottieAnimationView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/progress_lottie"
-    android:layout_width="54dp"
-    android:layout_height="54dp"
+    android:layout_width="@dimen/huge_size"
+    android:layout_height="@dimen/huge_size"
     android:layout_gravity="center"
     android:scaleType="fitCenter"
     app:lottie_autoPlay="true"
