--- a/app/src/main/res/layout/dialog_selectable_category.xml
+++ b/app/src/main/res/layout/dialog_selectable_category.xml
@@ -9,8 +9,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_drawer"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/medium_large_size"
+            android:layout_height="@dimen/medium_large_size"
             android:src="@drawable/arrow_down_sheet"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -19,8 +19,8 @@
         <View
             android:id="@+id/divider"
             android:layout_width="wrap_content"
-            android:layout_height="0.8dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="@dimen/divider_size"
+            android:layout_marginTop="@dimen/small_size"
             android:background="@drawable/shape_divider_section"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_selectable_list"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/zero_size"
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
