--- a/app/src/main/res/layout/item_selectable_view.xml
+++ b/app/src/main/res/layout/item_selectable_view.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:padding="12dp">
+        android:padding="@dimen/medium_size">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_title"
