--- a/app/src/main/res/layout/item_view_movie.xml
+++ b/app/src/main/res/layout/item_view_movie.xml
@@ -16,16 +16,16 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
-        app:cardCornerRadius="2dp">
+        app:cardCornerRadius="@dimen/xx_small_size">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iv_image"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="@dimen/zero_size"
+                android:layout_height="@dimen/zero_size"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
                 android:src="@drawable/placeholder_movie"
@@ -36,10 +36,10 @@
                 app:srcUrl="@{data.imageUrl}" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="0dp"
+                android:layout_width="@dimen/zero_size"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent_black"
-                android:padding="1dp"
+                android:padding="@dimen/divider_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
