--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -6,5 +6,13 @@
     <fragment
         android:id="@+id/movieListFragment"
         android:name="com.abdullah.moviereviewapp.feature.presentation.movielist.MovieListFragment"
-        android:label="MovieListFragment" />
+        android:label="MovieListFragment" >
+        <action
+            android:id="@+id/action_movieListFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetailFragment"
+        android:name="com.abdullah.moviereviewapp.feature.presentation.moviedetail.MovieDetailFragment"
+        android:label="MovieDetailFragment" />
 </navigation>
