--- a/app/src/main/res/drawable/gradient_black_background.xml
+++ b/app/src/main/res/drawable/gradient_black_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="270"
-        android:endColor="#0D000000"
-        android:startColor="#FC000000"
+        android:endColor="#19000000"
+        android:startColor="#000000"
         android:type="linear" />
 </shape>
